--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,9 @@
   box-sizing: border-box;
   font-family: figtree;
 }
+.h-n{
+  display: none;
+}
 .main{
     background-color: #FFFAF5;
     height: 100vh;
@@ -529,6 +532,21 @@ font-family: Figtree;
     width: 100px;
     height: 300px;
     border-radius: 20px;
+}
+.h-n{
+    display: block;
+    color: #000;
+}
+.mid-content {
+  background: rgba(255, 255, 255, 0.1); /* Semi-transparent */
+  border-radius: 0px;
+  padding: 20px;
+  backdrop-filter: blur(10px); /* Glassy blur effect */
+  -webkit-backdrop-filter: blur(10px); /* Safari support */
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  color: white;
+  width: 100%;
 }
 
 }
